welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:20: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:32: error: Unmatched closing brace '}' ignored here
}
^